--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -2,6 +2,7 @@
     "RepeatPeriod": "per esempio. 1Y per 1 anno",
     "addCountdown": "Aggiungi il conto alla rovescia",
     "autodelete": "Elimina il conto alla rovescia quando viene raggiunta la fine",
+    "countUp": "Conta alla rovescia",
     "dateFormat": "Formato data",
     "endDate": "Data di fine",
     "inWordsLong": "In parole (lungo)",
