--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -2,6 +2,7 @@
     "RepeatPeriod": "b.v. 1Y voor 1 jaar",
     "addCountdown": "Aftellen toevoegen",
     "autodelete": "Wis Countdown als het einde is bereikt",
+    "countUp": "Optellen",
     "dateFormat": "Datumnotatie",
     "endDate": "Einddatum",
     "inWordsLong": "In woorden (lang)",
