--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -2,6 +2,7 @@
     "RepeatPeriod": "na przykład 1Y na 1 rok",
     "addCountdown": "Dodaj odliczanie",
     "autodelete": "Usuń odliczanie po osiągnięciu końca",
+    "countUp": "Odliczanie",
     "dateFormat": "Format daty",
     "endDate": "Data zakonczenia",
     "inWordsLong": "Słownie (długo)",
