--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -2,6 +2,7 @@
     "RepeatPeriod": "например 1Y на 1 год",
     "addCountdown": "Добавить обратный отсчет",
     "autodelete": "Удалить обратный отсчет, когда достигнут конец",
+    "countUp": "Посчитать",
     "dateFormat": "Формат даты",
     "endDate": "Дата окончания",
     "inWordsLong": "Словами (долго)",
