--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -2,6 +2,7 @@
     "RepeatPeriod": "例如一年( 1Y)",
     "addCountdown": "添加倒计时",
     "autodelete": "计时结束时删除倒计时",
+    "countUp": "计数",
     "dateFormat": "日期格式",
     "endDate": "结束日期",
     "inWordsLong": "用词（长）",
