--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -2,6 +2,7 @@
     "RepeatPeriod": "z.B. 1Y für 1 Jahr",
     "addCountdown": "Countdown hinzufügen",
     "autodelete": "Countdown löschen wenn Zeitpunkt erreicht wurde",
+    "countUp": "Zusammenzählen",
     "dateFormat": "Datumsformat",
     "endDate": "Enddatum",
     "inWordsLong": "In Worten (lang)",
