--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -2,6 +2,7 @@
     "RepeatPeriod": "p.ej. 1Y por 1 año",
     "addCountdown": "Agregar cuenta regresiva",
     "autodelete": "Eliminar cuenta atrás cuando se llega al final",
+    "countUp": "Contar hasta",
     "dateFormat": "Formato de fecha",
     "endDate": "Fecha final",
     "inWordsLong": "En palabras (largo)",
