--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Agregar cuenta regresiva",
     "autodelete": "Eliminar cuenta atrás cuando se llega al final",
     "countUp": "Contar hasta",
+    "date": "Fecha",
     "dateFormat": "Formato de fecha",
+    "delete": "Borrar",
     "endDate": "Fecha final",
     "inWordsLong": "En palabras (largo)",
     "inWordsShort": "En palabras",
+    "name": "Nombre",
+    "repeatColoumn": "Repetir, por ej. 1Y por 1 año",
     "settings": "Configuraciones",
     "tablecontent": "Mostrar estos campos en la tabla:",
+    "time": "Tiempo",
     "totalNoOfDays": "Numero total de dias",
     "totalNoOfHours": "Numero total de horas",
     "totalNoOfWeeks": "Número total de semanas"
