--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Aftellen toevoegen",
     "autodelete": "Wis Countdown als het einde is bereikt",
     "countUp": "Optellen",
+    "date": "Datum",
     "dateFormat": "Datumnotatie",
+    "delete": "Verwijderen",
     "endDate": "Einddatum",
     "inWordsLong": "In woorden (lang)",
     "inWordsShort": "In woorden (kort)",
+    "name": "Naam",
+    "repeatColoumn": "Herhaal, b.v. 1 jaar voor 1 jaar",
     "settings": "Instellingen",
     "tablecontent": "Toon deze velden in de tabel:",
+    "time": "Tijd",
     "totalNoOfDays": "Totaal aantal dagen",
     "totalNoOfHours": "Totaal aantal uren",
     "totalNoOfWeeks": "Totaal aantal weken"
