--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Adicionar contagem regressiva",
     "autodelete": "Excluir a contagem regressiva quando o fim for alcançado",
     "countUp": "Contagem crescente",
+    "date": "Data",
     "dateFormat": "Formato de data",
+    "delete": "Excluir",
     "endDate": "Data final",
     "inWordsLong": "Em palavras (longa)",
     "inWordsShort": "Em palavras (curta)",
+    "name": "Nome",
+    "repeatColoumn": "Repita, por exemplo 1 ano por 1 ano",
     "settings": "Configurações",
     "tablecontent": "Mostre os seguintes campos na tabela:",
+    "time": "Tempo",
     "totalNoOfDays": "Número total de dias",
     "totalNoOfHours": "Número total de horas",
     "totalNoOfWeeks": "Número total de semanas"
