--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Добавить обратный отсчет",
     "autodelete": "Удалить обратный отсчет, когда достигнут конец",
     "countUp": "Посчитать",
+    "date": "Дата",
     "dateFormat": "Формат даты",
+    "delete": "Удалить",
     "endDate": "Дата окончания",
     "inWordsLong": "Словами (долго)",
     "inWordsShort": "Словами (коротко)",
+    "name": "Имя",
+    "repeatColoumn": "Повторите, например. 1Г на 1 год",
     "settings": "настройки",
     "tablecontent": "Показать эти поля в таблице:",
+    "time": "Время",
     "totalNoOfDays": "Общее количество дней",
     "totalNoOfHours": "Общее количество часов",
     "totalNoOfWeeks": "Общее количество недель"
