--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Додайте зворотний відлік",
     "autodelete": "Видалити зворотний відлік, коли досягнуто кінця",
     "countUp": "Підрахувати",
+    "date": "Дата",
     "dateFormat": "Формат дати",
+    "delete": "Видалити",
     "endDate": "Дата закінчення",
     "inWordsLong": "Прописом (довго)",
     "inWordsShort": "На словах (коротко)",
+    "name": "Ім'я",
+    "repeatColoumn": "Повторити, напр. 1 рік на 1 рік",
     "settings": "Налаштування",
     "tablecontent": "Покажіть ці поля в таблиці:",
+    "time": "час",
     "totalNoOfDays": "Загальна кількість днів",
     "totalNoOfHours": "Загальна кількість годин",
     "totalNoOfWeeks": "Загальна кількість тижнів"
