--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "添加倒计时",
     "autodelete": "计时结束时删除倒计时",
     "countUp": "计数",
+    "date": "日期",
     "dateFormat": "日期格式",
+    "delete": "删除",
     "endDate": "结束日期",
     "inWordsLong": "用词（长）",
     "inWordsShort": "缩写",
+    "name": "姓名",
+    "repeatColoumn": "重复，例如1Y 1年",
     "settings": "设置",
     "tablecontent": "在表格中显示这些字段：",
+    "time": "时间",
     "totalNoOfDays": "总天数",
     "totalNoOfHours": "总小时数",
     "totalNoOfWeeks": "总周数"
