--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Countdown hinzufügen",
     "autodelete": "Countdown löschen wenn Zeitpunkt erreicht wurde",
     "countUp": "Hochzählen",
+    "date": "Datum",
     "dateFormat": "Datumsformat",
+    "delete": "Löschen",
     "endDate": "Enddatum",
     "inWordsLong": "In Worten (lang)",
     "inWordsShort": "In Worten (kurz)",
+    "name": "Name",
+    "repeatColoumn": "Wiederholen, z.B. 1Y für 1 Jahr",
     "settings": "Einstellungen",
     "tablecontent": "Folgende Felder in Tabelle anzeigen:",
+    "time": "Zeit",
     "totalNoOfDays": "Gesamtanzahl Tage",
     "totalNoOfHours": "Gesamtanzahl Stunden",
     "totalNoOfWeeks": "Gesamtanzahl Wochen"
