--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Add countdown",
     "autodelete": "Delete countdown when end is reached",
     "countUp": "Count Up",
+    "date": "Date",
     "dateFormat": "Date format",
+    "delete": "Delete",
     "endDate": "End date",
     "inWordsLong": "In words (long)",
     "inWordsShort": "In words (short)",
+    "name": "Name",
+    "repeatColoumn": "Repeat, e.g. 1Y for 1 year",
     "settings": "Settings",
     "tablecontent": "Show these fields in table:",
+    "time": "Time",
     "totalNoOfDays": "Total number of days",
     "totalNoOfHours": "Total number of hours",
     "totalNoOfWeeks": "Total number of weeks"
