--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -3,12 +3,17 @@
     "addCountdown": "Dodaj odliczanie",
     "autodelete": "Usuń odliczanie po osiągnięciu końca",
     "countUp": "Odliczanie",
+    "date": "Data",
     "dateFormat": "Format daty",
+    "delete": "Usuwać",
     "endDate": "Data zakonczenia",
     "inWordsLong": "Słownie (długo)",
     "inWordsShort": "Słowami (krótki)",
+    "name": "Nazwa",
+    "repeatColoumn": "Powtórz np. 1 rok na 1 rok",
     "settings": "Ustawienia",
     "tablecontent": "Pokaż te pola w tabeli:",
+    "time": "Czas",
     "totalNoOfDays": "Całkowita liczba dni",
     "totalNoOfHours": "Całkowita liczba godzin",
     "totalNoOfWeeks": "Całkowita liczba tygodni"
