--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "In Worten (lang)",
     "inWordsShort": "In Worten (kurz)",
     "name": "Name",
+    "overview": "Überblick",
     "repeatColoumn": "Wiederholen, z.B. 1Y für 1 Jahr",
     "settings": "Einstellungen",
     "tablecontent": "Folgende Felder in Tabelle anzeigen:",
