--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "In words (long)",
     "inWordsShort": "In words (short)",
     "name": "Name",
+    "overview": "Überblick",
     "repeatColoumn": "Repeat, e.g. 1Y for 1 year",
     "settings": "Settings",
     "tablecontent": "Show these fields in table:",
