--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "En palabras (largo)",
     "inWordsShort": "En palabras",
     "name": "Nombre",
+    "overview": "Überblick",
     "repeatColoumn": "Repetir, por ej. 1Y por 1 año",
     "settings": "Configuraciones",
     "tablecontent": "Mostrar estos campos en la tabla:",
