--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "En mots (long)",
     "inWordsShort": "En mots (court)",
     "name": "Nom",
+    "overview": "Überblick",
     "repeatColoumn": "Répétez, par ex. 1Y pour 1 an",
     "settings": "Paramètres",
     "tablecontent": "Afficher ces champs dans le tableau:",
