--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "In parole (lungo)",
     "inWordsShort": "In parole (breve)",
     "name": "Nome",
+    "overview": "Überblick",
     "repeatColoumn": "Ripeti, ad es. 1 anno per 1 anno",
     "settings": "impostazioni",
     "tablecontent": "Mostra questi campi nella tabella:",
