--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "In woorden (lang)",
     "inWordsShort": "In woorden (kort)",
     "name": "Naam",
+    "overview": "Overblick",
     "repeatColoumn": "Herhaal, b.v. 1 jaar voor 1 jaar",
     "settings": "Instellingen",
     "tablecontent": "Toon deze velden in de tabel:",
