--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "Słownie (długo)",
     "inWordsShort": "Słowami (krótki)",
     "name": "Nazwa",
+    "overview": "Überblick",
     "repeatColoumn": "Powtórz np. 1 rok na 1 rok",
     "settings": "Ustawienia",
     "tablecontent": "Pokaż te pola w tabeli:",
