--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "Em palavras (longa)",
     "inWordsShort": "Em palavras (curta)",
     "name": "Nome",
+    "overview": "Überblick",
     "repeatColoumn": "Repita, por exemplo 1 ano por 1 ano",
     "settings": "Configurações",
     "tablecontent": "Mostre os seguintes campos na tabela:",
