--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "Словами (долго)",
     "inWordsShort": "Словами (коротко)",
     "name": "Имя",
+    "overview": "Уберблик",
     "repeatColoumn": "Повторите, например. 1Г на 1 год",
     "settings": "настройки",
     "tablecontent": "Показать эти поля в таблице:",
