--- a/admin/i18n/uk/translations.json
+++ b/admin/i18n/uk/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "Прописом (довго)",
     "inWordsShort": "На словах (коротко)",
     "name": "Ім'я",
+    "overview": "Überblick",
     "repeatColoumn": "Повторити, напр. 1 рік на 1 рік",
     "settings": "Налаштування",
     "tablecontent": "Покажіть ці поля в таблиці:",
