--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -10,6 +10,7 @@
     "inWordsLong": "用词（长）",
     "inWordsShort": "缩写",
     "name": "姓名",
+    "overview": "尤伯布里克",
     "repeatColoumn": "重复，例如1Y 1年",
     "settings": "设置",
     "tablecontent": "在表格中显示这些字段：",
